Fix white spaces and reduce QR code size

--- a/assets/buy.css
+++ b/assets/buy.css
@@ -8,6 +8,9 @@
 body {
     background-color: #f5f5f5;
     min-height: 100vh;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
 }
 
 .header {
